--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     background-image: url(images/bg.png);
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 main{
