--- a/primonial.css
+++ b/primonial.css
@@ -1,7 +1,7 @@
 /*  PRICING  */
 
-#price-testimonial{
-  width: 1850px;
+#price-testimonial {
+  width: 100vw;
   height: 1063px;
   background-image: url(images/Group\ 42474.png);
   background-position: center;
@@ -10,15 +10,15 @@
   background-color: #efe4f7;
 }
 
-#pricing-table{
+#pricing-table {
   display: flex;
   justify-content: center;
   padding-top: 5rem;
 }
 
-.pricing-container{
+.pricing-container {
   height: 583px;
-  width: 1550px;
+  width: 100%;
   display: flex;
   justify-content: center;
   border-radius: 25px;
@@ -27,9 +27,9 @@
   box-shadow: -2px 24px 30px 0px rgba(39, 13, 65, 0.37);
 }
 
-.table{
+.table {
   height: 583px;
-  width: 1450px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +37,7 @@
   gap: 7rem;
 }
 
-.pricing-details{
+.pricing-details {
   height: 416px;
   width: 298px;
   transition: 1s;
@@ -48,32 +48,32 @@
   margin-bottom: 120px;
 }
 
-.pricing-header{
+.pricing-header {
   font-size: 40px;
   color: #462076;
   font-weight: 700;
 }
 
-.price{
+.price {
   font-size: 36px;
   font-weight: 700;
-  color: #231D4F;
+  color: #231d4f;
 }
 
-.subhead{
-  font-size: 17px; 
-  font-weight: 500; 
+.subhead {
+  font-size: 17px;
+  font-weight: 500;
   color: #848199;
 }
 
-.pricing-details i{
-  color: #BB6BD9;
+.pricing-details i {
+  color: #bb6bd9;
   background-color: rgba(82, 67, 194, 0.15);
   border-radius: 10px;
   font-size: 20px;
 }
 
-.pricing-text{
+.pricing-text {
   font-size: 20px;
   color: #848199;
   font-weight: 500;
@@ -81,25 +81,25 @@
   margin-top: 2rem;
 }
 
-.btn3{
-  color: #F7B948;
+.btn3 {
+  color: #f7b948;
   background-color: transparent;
-  font-family:'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 25px;
   font-weight: 700;
-  padding: 0.5rem 1.5rem; 
+  padding: 0.5rem 1.5rem;
   border: 1px solid;
   border-radius: 5px;
-  border-color: #F7B948;
-  cursor: pointer; 
+  border-color: #f7b948;
+  cursor: pointer;
   margin-top: 3rem;
 }
 
 /*  PRICING HOVER EFFECT  */
 
-.pricing-details:hover{
+.pricing-details:hover {
   transform: scale(1);
-  background-color: #270D41;
+  background-color: #270d41;
   box-shadow: -2px 24px 30px 0px rgba(39, 13, 65, 0.37);
   border-radius: 20px;
   height: 550px;
@@ -110,21 +110,21 @@
   margin-bottom: 140px;
 }
 
-.pricing-details:hover .price{
-  color: #E7E4F7;
+.pricing-details:hover .price {
+  color: #e7e4f7;
 }
 
-.pricing-details:hover .subhead{
-  color: #ACA9C4;
+.pricing-details:hover .subhead {
+  color: #aca9c4;
 }
 
-.pricing-details:hover .pricing-text{
-  color: #ACA9C4;
+.pricing-details:hover .pricing-text {
+  color: #aca9c4;
 }
 
-.pricing-details:hover .btn3{
-  color: #E7E4F7;
-  background-color: #F7B948;
+.pricing-details:hover .btn3 {
+  color: #e7e4f7;
+  background-color: #f7b948;
 }
 
 /*  TESTIMONIAL */
@@ -132,14 +132,14 @@
 #client-testimonial {
   height: 710px;
   width: 100%;
-  background-color: #E7E4F7;
+  background-color: #e7e4f7;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-top: 5rem;
 }
 
-.testimonianl-container{
+.testimonianl-container {
   height: 480px;
   width: 100%;
   display: flex;
@@ -149,21 +149,21 @@
   margin-bottom: 13rem;
 }
 
-.testimonial{
+.testimonial {
   width: 426px;
-  height: 64px; 
+  height: 64px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.testimonial-head{
+.testimonial-head {
   font-size: 40px;
   font-weight: 600;
   color: #462076;
 }
 
-.testimonial-slide{
+.testimonial-slide {
   height: 410px;
   width: 100%;
   display: flex;
@@ -195,7 +195,7 @@
   background: #fff;
 }
 
-.testimonial-info{
+.testimonial-info {
   width: 560px;
   height: 56px;
   display: flex;
@@ -203,30 +203,30 @@
   gap: 1.3rem;
 }
 
-.client-image{
+.client-image {
   display: flex;
-  align-items: center; 
+  align-items: center;
 }
 
-.client-image img{
+.client-image img {
   height: 56px;
   width: 56px;
   border-radius: 50px;
 }
 
-.client-name{
+.client-name {
   font-size: 18px;
   font-weight: 700;
   color: #111827;
 }
 
-.client-occupation{
+.client-occupation {
   font-size: 14px;
   font-weight: 400;
   color: #374151;
 }
 
-.testimonial-quote{
+.testimonial-quote {
   height: 204px;
   display: flex;
   justify-content: center;
@@ -234,16 +234,16 @@
   gap: 15px;
 }
 
-.testimonial-quote i{
+.testimonial-quote i {
   display: flex;
   align-items: center;
-  color: #AC46F2;
+  color: #ac46f2;
   height: 26px;
   font-size: 48px;
   margin-bottom: 11rem;
 }
 
-.testimonial-quote .client-feedback{
+.testimonial-quote .client-feedback {
   font-size: 18px;
   font-weight: 400;
   line-height: 28px;
@@ -252,14 +252,14 @@
 }
 
 .testimonial-pagination .swiper-pagination-bullet-active {
-  background: #AC46F2;
+  background: #ac46f2;
 }
 
-.swiper-slide-active{
+.swiper-slide-active {
   box-shadow: -2px 20px 20px 0px rgba(39, 13, 65, 0.37);
   border-radius: 25px;
 }
 
-.myTestimonial .swiper-wrapper{
+.myTestimonial .swiper-wrapper {
   transition-timing-function: linear;
 }
