--- a/works.css
+++ b/works.css
@@ -1,19 +1,25 @@
-#works{
-  width: 1850px;
+#works {
+  width: 100vw;
   height: 472px;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   background-image: url(images/works\ bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: linear-gradient(315deg, #DA22FF, #9733EE 15%, black 50%, #9733EE 85%, #DA22FF 100%);
-  
+  background-image: linear-gradient(
+    315deg,
+    #da22ff,
+    #9733ee 15%,
+    black 50%,
+    #9733ee 85%,
+    #da22ff 100%
+  );
 }
 
-.works-container{
-  width: 1280px;
+.works-container {
+  width: 100vw;
   height: 268px;
   display: flex;
   flex-direction: column;
@@ -22,7 +28,7 @@
   gap: 3rem;
 }
 
-.works-header{
+.works-header {
   width: 290px;
   height: 64px;
   display: flex;
@@ -30,15 +36,15 @@
   align-items: center;
 }
 
-.works-header .section-header{
+.works-header .section-header {
   font-size: 42px;
   font-weight: 800;
-  color: #E0EAFC;
-  color: #CFDEF3;
+  color: #e0eafc;
+  color: #cfdef3;
 }
 
-.works-steps{
-  width: 1500px;
+.works-steps {
+  width: 100%;
   height: 156px;
   display: flex;
   justify-content: center;
@@ -46,13 +52,13 @@
   gap: 8rem;
 }
 
-.works-steps i{
+.works-steps i {
   color: #f7b948;
   font-size: 24px;
   padding-bottom: 15px;
 }
 
-.works-steps i::after{
+.works-steps i::after {
   content: " ";
   display: block;
   width: 190px;
@@ -64,29 +70,28 @@
   z-index: -2;
 }
 
-
-.works-steps h2{
+.works-steps h2 {
   font-size: 24px;
   font-weight: 500;
   padding-bottom: 15px;
-  color: #E0EAFC;
-  color: #CFDEF3;
+  color: #e0eafc;
+  color: #cfdef3;
 }
 
-.works-steps p{
+.works-steps p {
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
-  color: #E0EAFC;
-  color: #CFDEF3;
+  color: #e0eafc;
+  color: #cfdef3;
 }
 
-.details-dash{
+.details-dash {
   display: flex;
   align-items: center;
 }
 
-.details-dash p{
+.details-dash p {
   font-size: 20px;
   color: #f7b948;
   margin-bottom: 0.5rem;
