--- a/portfolio.css
+++ b/portfolio.css
@@ -1,8 +1,7 @@
-
 #portfolio {
-  width: 1710px;
+  width: 100vw;
   height: 600px;
-  background: #270D41;
+  background: #270d41;
   border-radius: 26px;
   display: flex;
   justify-content: center;
@@ -10,8 +9,8 @@
   margin-top: 5rem;
 }
 
-.portfolio-container{
-  width: 1580px;
+.portfolio-container {
+  width: 100%;
   height: 475px;
   display: flex;
   align-items: center;
@@ -38,23 +37,21 @@
   line-height: 36.4px;
 }
 
-.btn4{
-  color: #F7B948;
+.btn4 {
+  color: #f7b948;
   background-color: transparent;
-  font-family:'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 20px;
   font-weight: 700;
-  padding: 1rem 3.4rem; 
+  padding: 1rem 3.4rem;
   border: 2px solid;
   border-radius: 5px;
-  border-color: #F7B948;
-  cursor: pointer; 
+  border-color: #f7b948;
+  cursor: pointer;
   margin-top: 4.8rem;
 }
 
-
 /*--    SWIPER   --*/
-
 
 .slide-container {
   width: 1150px;
@@ -73,7 +70,7 @@
   margin-bottom: 35px;
 }
 
-.myPortfolio .swiper-slide{
+.myPortfolio .swiper-slide {
   background-position: center;
   background-size: cover;
   width: 340px;
@@ -88,28 +85,27 @@
 
 /*--    SWIPER CONTROLS   --*/
 
-
 .swiper-control {
   position: relative;
   display: flex;
   margin-top: 10px;
 }
 
-.swiper-pagination .portfolio-pagination{
+.swiper-pagination .portfolio-pagination {
   margin-bottom: 20px;
 }
 
-.swiper-button-next{
+.swiper-button-next {
   right: 27%;
   color: #fff;
 }
 
-.swiper-button-prev{
+.swiper-button-prev {
   left: 27%;
   color: #fff;
 }
 
-.slider-arrow{
+.slider-arrow {
   background: rgba(255, 255, 255, 0.27);
   width: 51px;
   height: 51px;
@@ -119,14 +115,14 @@
 }
 
 .swiper-control .slider-arrow::after {
-  content: '';
+  content: "";
 }
 
-.swiper-control .slider-arrow i{
+.swiper-control .slider-arrow i {
   font-size: 25px;
   color: #fff;
 }
 
 .portfolio-pagination .swiper-pagination-bullet-active {
-  background:  rgba(250, 248, 248, 1);
+  background: rgba(250, 248, 248, 1);
 }
